# sandbox

./: .gitignore  meson.build
example/: main.cpp  meson.build
include/sandbox/: sandbox-camera.hpp  sandbox-color.hpp  sandbox-engine.hpp  sandbox-hit.hpp  sandbox-material.hpp  sandbox-png.hpp  sandbox-point.hpp  sandbox-random.hpp  sandbox-ray.hpp  sandbox-resolution.hpp  sandbox-sphere.hpp  sandbox-trace.hpp  sandbox.hpp
source/: sandbox-png.cpp
subprojects/: geometry.wrap
